# llm-zoomcamp-ac

./: README.md
01-agentic-rag/: README.md  homework.ipynb  rag_helper.py
02-vector-search/: embedder.py  homework.ipynb  pyproject.toml
03-orchestration/: README.md
04-evaluation/: README.md  homework.ipynb  pyproject.toml
05-monitoring/: homework.ipynb  pyproject.toml  sqlite_exporter.py  traces.db
