[project]
name = "04-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "ipywidgets>=8.1.8",
    "minsearch>=0.2.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
